--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "singleQuote": true,
     "semi": true,
     "trailingComma": "none",
-    "tabWidth": 2
+    "tabWidth": 2,
+    "endOfLine": "auto"
 }
